--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ SET (CMAKE_CXX_FLAGS          "${CMAKE_CXX_FLAGS} -ljansson")
 # The project directories.
 set (CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_LIST_DIR}")
 set (PROJECT_BINARY_DIR "${CMAKE_CURRENT_LIST_DIR}/bin")
-set (PROJECT_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}/includes")
+set (PROJECT_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}/include")
 set (PROJECT_SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/impl")
 
 
