mods for gcc compiler

--- a/impl/CMakeLists.txt
+++ b/impl/CMakeLists.txt
@@ -1,4 +1,8 @@
 
+# observed that these FLAGS are not being updated
+SET (CMAKE_CXX_FLAGS          "${CMAKE_CXX_FLAGS} -fabi-version=7 -lstdc++ -ljansson")# -stdlib=libc++ -lstdc++ -std=c++11
+SET (CMAKE_CXX_FLAGS          "${CMAKE_CXX_FLAGS} -Wno-deprecated")
+
 
 # build test programs.
 set(TEST_SOURCE_FILE "${PROJECT_SOURCE_DIR}/json_wrapper.cxx")
